ul-alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ button {
   .nav {
     position: relative;
     flex-direction: row-reverse;
-    padding: 2rem;
+    padding: 1rem;
     background-color: hsl(0deg, 0%, 100%);
     width: 100%;
     z-index: 100;
@@ -238,6 +238,8 @@ button {
     padding: 0;
     width: auto;
     padding-top: 0;
+    height: 35px;
+    align-self: center;
   }
 }
 .nav__list {
